--- a/package.json
+++ b/package.json
@@ -2,15 +2,26 @@
   "name": "aoc-2022",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "ts-node "
+  },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "tslib": "^2.3.0"
+  },
   "devDependencies": {
     "@nrwl/cli": "15.2.4",
+    "@nrwl/jest": "15.2.4",
     "@nrwl/js": "15.2.4",
     "@nrwl/workspace": "15.2.4",
+    "@types/jest": "28.1.1",
+    "@types/node": "16.11.7",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
     "nx": "15.2.4",
     "prettier": "^2.6.2",
+    "ts-jest": "28.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "~4.8.2"
   }
 }
