--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 dist
 tmp
 /out-tsc
+out
 
 # dependencies
 node_modules
@@ -34,7 +35,7 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
-/docs
+
 
 # System Files
 .DS_Store
