--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "serve": "nx serve",
     "build": "nx build"
   },
-  "private": true,
+  "private": false,
+  "homepage": "https://popovicsandras.github.io/aoc/",
   "dependencies": {
     "@emotion/react": "11.10.4",
     "@emotion/styled": "11.10.4",
