Falling back to webpack baseHref

--- a/apps/app/project.json
+++ b/apps/app/project.json
@@ -12,7 +12,7 @@
         "compiler": "babel",
         "outputPath": "out",
         "index": "apps/app/src/index.html",
-        "baseHref": "/",
+        "baseHref": "/aoc/",
         "main": "apps/app/src/main.tsx",
         "polyfills": "apps/app/src/polyfills.ts",
         "tsConfig": "apps/app/tsconfig.app.json",
