--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "11.10.4",
     "@emotion/styled": "11.10.4",
     "core-js": "^3.6.5",
+    "emotion-reset": "^3.0.1",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.4.1",
