--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "11.10.4",
     "@emotion/styled": "11.10.4",
+    "@types/prismjs": "^1.26.0",
     "core-js": "^3.6.5",
     "emotion-reset": "^3.0.1",
     "prismjs": "^1.29.0",
