--- a/nx.json
+++ b/nx.json
@@ -52,7 +52,13 @@
         "unitTestRunner": "none",
         "linter": "eslint"
       }
+    },
+    "@nrwl/next": {
+      "application": {
+        "style": "@emotion/styled",
+        "linter": "eslint"
+      }
     }
   },
-  "defaultProject": "app"
+  "defaultProject": "webapp"
 }
