--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "homepage": "https://popovicsandras.github.io/aoc/",
   "dependencies": {
     "@emotion/react": "11.10.4",
+    "@emotion/server": "11.10.0",
     "@emotion/styled": "11.10.4",
     "@types/prismjs": "^1.26.0",
     "core-js": "^3.6.5",
     "emotion-reset": "^3.0.1",
+    "next": "13.0.0",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -29,6 +31,7 @@
     "@nrwl/jest": "15.2.4",
     "@nrwl/js": "15.2.4",
     "@nrwl/linter": "15.2.4",
+    "@nrwl/next": "^15.2.4",
     "@nrwl/react": "15.2.4",
     "@nrwl/web": "15.2.4",
     "@nrwl/workspace": "15.2.4",
@@ -41,6 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "eslint": "~8.15.0",
+    "eslint-config-next": "13.0.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
