--- a/apps/webapp/project.json
+++ b/apps/webapp/project.json
@@ -10,7 +10,7 @@
       "defaultConfiguration": "production",
       "options": {
         "root": "apps/webapp",
-        "outputPath": "out"
+        "outputPath": "dist/apps/webapp"
       },
       "configurations": {
         "development": {
