--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,6 +7,7 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
+    "strictPropertyInitialization": false,
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es2015",
