--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/server": "11.10.0",
     "@emotion/styled": "11.10.4",
     "@types/prismjs": "^1.26.0",
+    "chalk": "^4.1.2",
     "core-js": "^3.6.5",
     "emotion-reset": "^3.0.1",
     "next": "13.0.0",
